# template-v2

./: ADR.md  ARCHITECTURE_PLAN.md  ARCHITECTURE_PLAN_SIMPLE.md  Architecture_Criteria.md  CLAUDE.md  SHOWCASE.md  alembic.ini  app.py  pyproject.toml
api/v1/: loans.py  users.py  webhooks.py
config/: settings.py
controller/: create-loan-controller.py  loan_controller.py  payment_controller.py  user_controller.py
database/: connection.py  context.py  dependencies.py  transaction.py
dependencies/: container.py  providers.py
entity/: loan.py  result.py  user.py
exception/: base.py  decorators.py  domain.py  handler.py  http_handler.py  infrastructure.py
factory/: disburse_provider_factory.py
migrations/: env.py
migrations/versions/: 001_create_users.py  002_create_loans.py  003_create_outbox.py  (+2 more)
model/: __init__.py  loan_model.py  payment_model.py  user_model.py
port/: disburse_provider_port.py  loan_query_repository_port.py  loan_repository_port.py  outbox_repository_port.py  payment_repository_port.py  score_provider_port.py  user_repository_port.py
repositories/: query.py
repository/: loan_query_repository.py  loan_repository.py  outbox_repository.py  payment_repository.py  user_repository.py
schema/: payment_schema.py  user_schema.py
service/: nvio_disburse_service.py  score_provider_service.py  stp_disburse_service.py
specs/: pay_loan_webhook.md
tests/: conftest.py
use-case/: create-loan.py
use_case/: disburse_loan.py  evaluate_loan.py  get_loan_detail.py  pay_loan.py  register_user.py  request_loan.py
utiliy/: share_code.py
(+57 files in other folders)
