[tool.poetry]
name = "loan-service"
version = "0.1.0"
description = "Loan management microservice — Clean Architecture"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {version = "^0.34.0", extras = ["standard"]}
asyncpg = "^0.30.0"
httpx = "^0.28.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-httpx = "^0.34.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "W", "F", "ASYNC"]
